Changed taskpane description

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -32,16 +32,19 @@
         <h2 class="ms-font-xl">Для того, щоб транслітерувати ім'я та прізвище згідно офіційних правил, виконайте наступні кроки: </h2>
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">Achieve more with Office integration</span>
+                <span class="ms-font-m">1. Введіть ім'я та прізвище українською в 1 комірку</span>
             </li>
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">Unlock features and functionality</span>
+                <span class="ms-font-m">2. Викличте функцію =UAEN.TRANSLIT</span>
             </li>
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">Create and visualize like a pro</span>
+                <span class="ms-font-m">3. Оберіть потрібну комірку, натисніть Enter</span>
+            </li>
+            <li class="ms-ListItem">
+                <span class="ms-font-m">4. Готово!</span>
+            </li>
+            <li class="ms-ListItem">
+                <span class="ms-font-m">*правила дійсні на момент 03.2020</span>
             </li>
         </ul>
         <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
